--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -220,11 +220,13 @@
         width: 100%;
     }
     @media @bp-global-medium {
-        top: @value__feature--height--tablet;
+        top: 680px;
     }
+
     @media @tablet {
-        top: calc(@value__feature--height--tablet - 100px);
+        top: calc(@value__feature--height--tablet - 80px);
     }
+
     @media @mobile {
         display: none;
     }
