--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -1,339 +1,112 @@
-// ---------------------------------------------
-// Scribe Template: CSS > Plugins > Blog > Blog Post
-// ---------------------------------------------
-
-
-@bp-blog-post-layout-vertical: ~"only screen and (max-width : 900px)";
-
-
-// ------------------------------
-// Blog Post
-// ------------------------------
-
-.blogpost {
-
-
-    // Blog Article
-    // ------------------------------
-    .post-article {
-        position: relative;
-        margin-bottom: 2em;
-    }
-
-
-
-
-    // Post Image
-    // ------------------------------
-
-
-    .post-image {
-
-    }
-
-
-
-
-        // Image Link
-        // ------------------------------
-
-
-        .image-link {
-            display: block;
-
-            // Container Width * 0.66
-            height: 0;
-            padding-bottom: 30%;
-
-            background-position: center;
-            background-size: cover;
-
-            @media @tablet {
-                padding-bottom: 40%;
-            }
-
-            .image {
-                display: none;
-            }
-        }
-
-
-
-
-    // Post Content
-    // ------------------------------
-
-
-    .post-content {
-        margin: 0;
-    }
-    .post-body,
-    .post-footer {
-        max-width: 66.666%;
-        margin: 0 auto;
-
-        @media @tablet {
-            max-width: 90%;
-        }
-    }
-
-
-
-
-    // Post Excerpt / Post Body
-    // ------------------------------
-
-
-    .post-body {
-        clear: both;
-        padding: 60px 0;
-
-        @media @bp-blog-post-layout-vertical {
-            padding: 40px 0;
-        }
-
-        @media @bp-global-small {
-            padding: 20px 0;
-        }
-    }
-
-
-
-
-    // Post Header
-    // ------------------------------
-
-
-    .post-header {
-        background-color: @color__blogpost-title--background;
-        padding: 20px 16.666%;
-
-        @media @tablet {
-            padding: 10px 5%;
-        }
-
-    }
-
-
-
-
-    // Post Title
-    // ------------------------------
-
-
-    .post-title {
-        margin: 0;
-        padding: 0;
-        .heading--2;
-        color: @color__blogpost-title--text;
-
-        @media @bp-global-medium, @bp-blog-post-layout-vertical {
-            font-size: bkscale(@font__h2--font-size, 0.8);
-            line-height: bkscale(@font__h2--line-height, 0.8);
-        }
-
-        @media @bp-global-small {
-            font-size: bkscale(@font__h2--font-size, 0.7);
-            line-height: bkscale(@font__h2--line-height, 0.7);
-        }
-    }
-
-
-
-
-    // Post Footer
-    // ------------------------------
-
-
-    .post-footer {
-        position: relative;
-
-        @media @bp-blog-post-layout-vertical {
-            padding: 40px;
-        }
-
-        @media @bp-blog-post-layout-vertical {
-            padding: 0 40px 20px;
-        }
-
-        @media @bp-global-small {
-            padding: 0 20px 20px;
-        }
-
-        // Timestamp
-
-        .timestamp {
-            position: absolute;
-            right: 70px;
-            color: fade(@color__p--text, 80%);
-            display: block;
-            margin-bottom: 2em;
-
-            @media @bp-global-medium {
-                font-size: bkscale(@font__p--font-size, 0.9);
-                line-height: bkscale(@font__p--line-height, 0.9);
-            }
-
-            @media @bp-blog-post-layout-vertical {
-                right: 30px;
-            }
-
-            @media @bp-global-small {
-                font-size: bkscale(@font__p--font-size, 0.8);
-                line-height: bkscale(@font__p--line-height, 0.8);
-            }
-        }
-    }
-
-
-
-
-    // Post Attributes
-    // ------------------------------
-
-
-    .post-attributes {
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-        flex-direction: row;
-        -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-        justify-content: flex-start;
-        -webkit-align-content: flex-start;
-        -ms-flex-line-pack: start;
-        align-content: flex-start;
-        -webkit-align-items: stretch;
-        -ms-flex-align: stretch;
-        align-items: stretch;
-
-        @media @mobile {
-            display: block;
-        }
-    }
-
-
-
-
-    // Post Category / Post Tags
-    // ------------------------------
-
-
-    .post-category, .post-tags {
-        margin-bottom: 2em;
-
-        @media @bp-global-medium {
-            margin-bottom: 1em;
-        }
-
-        @media @bp-global-small {
-            margin-bottom: 1em;
-        }
-
-        // Links
-
-        a {
-            .underline;
-
-            @media @bp-global-medium {
-                font-size: bkscale(@font__p--font-size, 0.9);
-                line-height: bkscale(@font__p--line-height, 0.9);
-            }
-
-            @media @bp-global-small {
-                font-size: bkscale(@font__p--font-size, 0.8);
-                line-height: bkscale(@font__p--line-height, 0.8);
-            }
-
-            &:first-letter {
-                text-transform: uppercase;
-            }
-        }
-    }
-
-
-
-
-    // Post Category
-    // ------------------------------
-
-
-    .post-category {
-        margin-right: 50px;
-
-        @media @mobile {
-            margin-right: 0;
-        }
-    }
-
-
-
-
-    // Category Title / Tags Title
-    // ------------------------------
-
-
-    .blogpost__category-title,
-    .blogpost__tags-title {
-        padding: 5px 0;
-        font-family: @font__h4--font-family;
-        font-size: 12px;
-        letter-spacing: 2px;
-        line-height: 1;
-        color: lighten(@color__p--text, 30%);
-        display: block;
-        margin-bottom: 5px;
-        text-transform: uppercase;
-        -webkit-font-smoothing: inherit;
-    }
-
-
-
-
-    // Tags List
-    // ------------------------------
-
-
-    .blogpost__tag-list {
-        display: block;
-    }
-
-
-
-
-    // Tags Item
-    // ------------------------------
-
-
-    .blogpost__tag-item {
-        margin-right: 1.5em;
-
-
-    }
-
-
-
-
-
-
-    // ------------------------------
-    // Sharing Links
-    // ------------------------------
-
-
-
-
-    // Sharing Links
-    // ------------------------------
-
-
-    .blogpost__sharing-links {
-        clear: both;
-    }
-
+// -----------------------------
+// 3. Blog Post
+// -----------------------------
+
+.blogpost__post-header {
+    text-align: center;
+}
+
+.blogpost__image {
+    margin: 0 auto;
+}
+
+.tag-item a:after {
+   content: ",";
+}
+
+.tag-item:last-of-type a:after {
+    display: none;
+}
+
+// Blog Post Footer
+.blogpost__post-footer {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center;
+
+    border-bottom: 1px solid darken(@color-swatch1,10%);
+}
+
+.blogpost__sharing-links {
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    margin: 10px 0 30px;
+}
+
+.blogpost__post-attributes {
+    -webkit-box-ordinal-group: 3;
+    -moz-box-ordinal-group: 3;
+    -webkit-order: 2;
+    -ms-flex-order: 2;
+    order: 2;
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    width: 100%;
+    padding: 10px 0px 5px;
+    border-top: 1px solid darken(@color-swatch1,10%);
+}
+
+.blogpost__post-article {
+    position: relative;
+    border: 1px solid darken(@color-swatch1,10%);
+    padding: 40px 20px 0 20px;
+}
+
+.blogpost__post-category {
+    border-right: 1px solid darken(@color-swatch1,10%);
+    padding-right: 20px;
+    margin-right: 20px;
+    display: inline-block;
+}
+
+.blogpost__post-tags {
+    display: inline-block;
+}
+
+// Blog Post Buttons
+.blogpost__button {
+    padding: 8px 20px;
 }
