--- a/less/plugins/blog/blog-posts-list.less
+++ b/less/plugins/blog/blog-posts-list.less
@@ -1,354 +1,291 @@
-// ---------------------------------------------------
-// Scribe Template: CSS > Plugins > Blog > Blog Posts List
-// ---------------------------------------------------
-
-
-
-
-// ------------------------------
-// Blog Post List
-// ------------------------------
+// -----------------------------
+// 2. Blog Post List
+// -----------------------------
 
 
 .blogpostlist {
-
-
-    // Pagination List
-    // ------------------------------
-
-    .pagination-list {
-        .flex-display;
-        .justify-content(space-between);
-        margin: 30px;
-
-        @media @mobile {
-            margin: 20px 0;
-        }
-
-        .button {
-            &:before,
-            &:after {
-                font-size: 10px;
-            }
-        }
+    padding: 0 20%;
+    @media @tablet {
+        padding: 0;
     }
+}
 
-
-    // Post Items
-    // ------------------------------
-
-
-    .post-items {
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-        flex-direction: row;
-        -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-        justify-content: flex-start;
-        -webkit-align-content: flex-start;
-        -ms-flex-line-pack: start;
-        align-content: flex-start;
-        -webkit-align-items: stretch;
-        -ms-flex-align: stretch;
-        align-items: stretch;
-
-        @media @bp-global-small {
-            display: block;
-        }
+.blogpostlist__post-header {
+    margin: 25px 0 0;
+    @media @tablet {
+        margin: 0 25px;
     }
-
-
-
-
-    // Post Header
-    // ------------------------------
-
-    .post-header {
-        margin-bottom: 20px;
-
-        @media @tablet {
-            margin-bottom: 10px;
-        }
-    }
-
-
-
-
-    // Post Article
-    // ------------------------------
-
-
-    .post-article {
-        position: relative;
-        width: 33.33%;
-        background-color: @color__secondary;
-        margin-bottom: 0;
-
-        &:nth-child(2n) {
-            background-color: darken(@color__secondary, 3%);
-        }
-
-        @media @bp-global-medium {
-            width: 50%;
-        }
-
-        @media @bp-global-small {
-            width: 100%;
-        }
-    }
-
-
-
-
-    // Post Image
-    // ------------------------------
-
-    .post-image {
-        height: 0;
-        padding-bottom: 50%;
-        position: relative;
-        overflow: hidden;
-
-        @media @bp-global-medium {
-            padding-bottom: 45%;
-        }
-        @media @bp-global-small {
-            padding-bottom: 40%;
-        }
-    }
-
-    // Image Link
-    .image-link {
-        .animation;
-        background-position: center center;
-        background-size: cover;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        -webkit-transition: all 0.3s ease-in-out;
-        -moz-transition: all 0.3s ease-in-out;
-        -o-transition: all 0.3s ease-in-out;
-        transition: all 0.3s ease-in-out;
-
-
-        &:hover {
-            -webkit-transform: scale(1.2);
-            -moz-transform: scale(1.2);
-            -o-transform: scale(1.2);
-            -ms-transform: scale(1.2);
-            transform: scale(1.2);
-        }
-    }
-
-    // Image
-
-    .blogpostlist__image {
-        display: none;
-    }
-
-
-
-
-    // Post Content
-    // ------------------------------
-
-
-    .post-content {
+    @media @mobile {
         margin: 0;
-
-        @media @bp-global-large {
-            padding: 50px 50px 110px;
-        }
-        @media @bp-global-medium {
-            padding: 40px 40px 100px;
-        }
-        @media @bp-global-small {
-            padding: 25px 20px 10px 20px;
-        }
-
     }
+}
 
-    // Post Title
-    .post-title {
-        @media @bp-global-small {
-            font-size: bkscale(@font__h2--font-size, 0.9);
-            line-height: bkscale(@font__h2--line-height, 0.9);
-        }
+.post-content {
+    margin: 20px 0 20px;
+}
+
+.blog-search__input {
+    margin: 0px auto;
+    display: table;
+}
+
+.blogpostlist__post-image,
+.blogpostlist__post-content {
+    margin: 0 40px;
+    @media @tablet {
+        margin: 0;
     }
+}
 
-    // Title Link
-    .title-link {
-        color: @color__h2--text;
-
-        &:hover {
-            box-shadow: inset 0px -1px 0px 0px @color__p--text;
-        }
+.blogpostlist .post-article {
+    position: relative;
+    float: left;
+    width: 100%;
+    @media @tablet {
+        padding: 40px 30px 30px 20px;
     }
+    @media @mobile {
+        padding: 20px 20px 10px 20px;
+    } 
+}
 
-
-    // Post Excerpt
-    .post-excerpt p {
-        font-size: bkscale(@font__p--font-size, 0.9);
-        line-height: bkscale(@font__p--line-height, 0.9);
-        color: lighten(@color__p--text, 8%);
+.blogpostlist__post-excerpt--full {
+    @media @tablet {
+        margin: 0 25px;
     }
+    @media @mobile {
+        margin: 0;
+    }
+}
 
+.blogpostlist__post-article {
+    @media @mobile {
+        text-align: center;
+    }
+    hr {
+        border: 1px solid darken(@color-swatch7,10%);
+    }
+}
 
-    // Read more
+.blogpostlist__image {
+    display: inline-block;
+}
 
-    .read-more {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        box-shadow: inset 0px -1px 0px 0px @color__primary;
+.blogpostlist__image-link {
+    margin: 25px;
+}
+
+.blogpostlist__post-image {
+    display: inline-block;
+    width: 30%;
+    @media @tablet {
+        float: initial;
+        width: 100%;
+    }
+}
+
+.blogpostlist__post-content {
+    width: 50%;
+    display: inline-block;
+    @media @tablet {
+        float: initial;
+        width: 100%;
+        text-align: center;
+    }
+}
+
+// Blog Post Flexbox
+.blogpostlist__post-article {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.blogpostlist__post-image {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+}
+
+.blogpostlist__post-content {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+}
+
+// Blog Post List Footer
+.blogpostlist__post-footer {
+    width: 50.1%;
+    @media @tablet {
+        width: initial;
+        padding-left: initial;
+        margin-top: 10px;
+    }
+    .timestamp {
         display: inline-block;
-        line-height: 1.5;
-        color: @color__primary;
-
-        @media @bp-global-large {
-            margin: 0 0 50px 50px;
-            font-size: 14px;
-        }
-        @media @bp-global-medium {
-            margin: 0 0 40px 40px;
-            font-size: 13px;
-        }
-        @media @bp-global-small {
-            margin: 0;
-            font-size: 12px;
-            position: relative;
-        }
-
-        &:hover {
-            opacity: .65;
-        }
+        padding: 20px 0;
+        margin: 0 auto;
+        float: right;
+        width: 100%;
     }
+}
 
+.post-image + .post-content + .blogpostlist__post-footer {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid darken(@color-swatch1,10%);
+    @media @tablet {
+        width: initial;
+        padding-left: 0;
+    }
+}
 
+// Blog Post List Pagination
 
+.blogpostlist__pagination-item {
+    display: inline-block;
+    width: 49%;
+    float: left;
+    text-align: left;
+}
 
-    // Post Footer
-    // ------------------------------
+.blogpostlist__pagination-item:nth-child(2) {
+    text-align: right;
+    float: right;
+}
 
+// List and Single Post
+.blogpostlist,
+.blogpost {
+    .image-link {
+        text-align: center;
+    }
+}
 
-    .post-footer {
+.post-body.blogpost__post-body,
+.blogpostlist__post-header,
+.blogpostlist__post-excerpt {
+    max-width: 700px;
+}
 
-        // Time
+.post-body.blogpost__post-body,
+.blogpostlist__post-excerpt {
+    margin: 0 auto;
+}
 
-        .timestamp {
+.post-body.blogpost__post-body {
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
 
-            color: fade(@color__p--text, 50%);
-            display: inline-block;
-            line-height: 1.5;
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            margin: 0;
+.blogpostlist__post-excerpt {
+    padding-bottom: 20px;
+    p {
+        margin-bottom: 10px;
+    }
+}
 
-            @media @bp-global-large {
-                padding: 0 50px 50px;
-                font-size: 14px;
-            }
-            @media @bp-global-medium {
-                padding: 0 40px 40px;
-                font-size: 13px;
-            }
-            @media @bp-global-small {
-                position: relative;
-                padding: 0 0 30px 20px;
-                font-size: 12px;
-            }
+.blogpost__post-image,
+.blogpost__post-content,
+.blogpost__post-footer,
+.blogpostlist__post-image,
+.blogpostlist__post-content
+ {
+    position: relative;
+    vertical-align: top;
+}
 
-        }
+.blogpost__post-content {
+    @media @tablet {
+        padding: 20px 20px 0 20px;
     }
 }
 
 
-
-
-
-
-
-
-
-// All Columns
-// ------------------------------
-
+// Responsive Columns
+// -----------------------------
 
 .responsivecolumns {
 
-    // Blog Post List
-
-    .blogpostlist {
-
-        // Post Article
-
-        .post-article {
+    // Blog Post List in 2 columns
+    .columns-two-left, 
+    .columns-two-right {
+        .blogpostlist__post-footer .timestamp {
+            width: 100%;
+            @media @tablet {
+                text-align: center;
+            }
+        }
+    }
+    
+    // Blog Post List in 3 columns
+    .columns-three-left, 
+    .columns-three-middle, 
+    .columns-three-right {
+        .blogpostlist__post-footer .timestamp {
             width: 100%;
         }
-
-        // Post Content
-
-        .post-content {
-            padding-bottom: 1em;
+        .blogpostlist__read-more {
+            padding: 8px 20px;
         }
-
-        // Timestamp
-
-        .post-footer .timestamp {
-            position: relative;
-            display: block;
+    }
+    
+    // Blog Post List in 4 columns
+    .columns-four-first, 
+    .columns-four-second, 
+    .columns-four-third, 
+    .columns-four-fourth {
+        .blogpostlist__post-footer .timestamp {
+            width: 100%;
         }
-
-        // Read more
-
-        .read-more {
-            position: relative;
-            margin: 0;
+        .blogpostlist__read-more {
+            padding: 8px;
         }
     }
 
-    // 3 and 4 columns
-    // ------------------------------
-
-
-    .columns-four-first,
-    .columns-four-second,
-    .columns-four-third,
-    .columns-four-fourth,
-    .columns-three-left,
-    .columns-three-right,
-    .columns-three-middle {
-        .post-items {
-
-            display: block;
-
-            // Post Article
-
-            .post-article {
-                width: auto;
-                background-color: transparent !important;
-            }
-
-            // Post Content
-
-            .post-content {
-                padding: 1em 0;
-            }
-
-            // Timestamp
-
-            .post-footer .timestamp {
-                padding: 0 0 2em 0;
-            }
-        }
-    }
 }
