--- a/less/plugins/blog/blog-search.less
+++ b/less/plugins/blog/blog-search.less
@@ -20,14 +20,13 @@
         right: auto;
         bottom: 0;
         left: 0;
-        padding: 0 26px;
+        padding: 6px 26px;
         color: @color__blogsearch-legend--text;
         background-color: @color__blogsearch-legend--background;
         width: 33%;
         font-family: @font__h2--font-family;
         font-size: @font__h2--font-size;
         line-height: bkscale(@font__button--font-size, 3);
-        height: bkscale(@font__button--font-size, 3);
         text-align: right;
 
        @media @bp-global-small {
@@ -128,12 +127,16 @@
             position: relative;
             padding: 0;
 
+            &:hover {
+                background-color: transparent;
+            }
+
             &:after {
                 content: '\f002';
                 font-family: 'FontAwesome', sans-serif;
                 position: absolute;
                 text-align: center;
-                line-height: bkscale(@font__button--font-size, 3);
+                line-height: 40.2px;                
                 color: @color__button--text;
                 font-size: 18px;
                 top: 0;
@@ -141,11 +144,6 @@
                 bottom: 0;
                 right: 0;
                 text-indent: 0;
-            }
-        }
-        @media @mobile {
-            &:after {
-                line-height: bkscale(@font__button--font-size, 2.2);
             }
         }
     }
