--- a/less/widgets/contact-form.less
+++ b/less/widgets/contact-form.less
@@ -97,9 +97,6 @@
 }
 
 
-
-
-
 // Label
 // ------------------------------
 
@@ -110,6 +107,23 @@
     }
 }
 
+
+
+
+// ------------------------------
+// Advanced Contact Form
+// ------------------------------
+
+.advancedcontactform__legend {
+	font-family: @font__h2--font-family;
+	font-size: @font__h2--font-size;
+	line-height: @font__h2--line-height;
+	color: @color__form-legend--text;
+}
+
+.advancedcontactform__button {
+	margin-top: 10px;
+}
 
 
 
