--- a/less/widgets/signupform.less
+++ b/less/widgets/signupform.less
@@ -19,14 +19,13 @@
 		right: auto;
 		bottom: 0;
 		left: 0;
-		padding: 0 26px;
+		padding: 6px 26px;
 		color: @color__form-legend--text;
 		background-color: @color__form-legend--background;
 		width: 33.33%;
 		font-family: @font__h2--font-family;
 		font-size: @font__h2--font-size;
 		line-height: bkscale(@font__button--font-size, 3);
-		height: bkscale(@font__button--font-size, 3);
 		text-align: right;
 
 		@media @bp-global-small {
