--- a/less/widgets/twitter.less
+++ b/less/widgets/twitter.less
@@ -142,7 +142,7 @@
 
 .twitter__timestamp {
 	font-size: 12px;
-	color: @color__p--text;
+	color: @color__link--text;
 
     @media @bp-global-small {
         font-size: 10px;
