--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -4,10 +4,18 @@
 
 .blogpost__post-header {
     text-align: center;
+    margin-top: 50px;
+    @media @tablet {
+        margin-top: 0;
+    }
 }
 
 .blogpost__image {
     margin: 0 auto;
+}
+
+.blogpost__post-image {
+    text-align: center;
 }
 
 .tag-item a:after {
@@ -49,8 +57,6 @@
     -ms-flex-align: center;
     align-items: center;
     text-align: center;
-
-    border-bottom: 1px solid darken(@color-swatch1,10%);
 }
 
 .blogpost__sharing-links {
@@ -86,17 +92,17 @@
     align-self: auto;
     width: 100%;
     padding: 10px 0px 5px;
-    border-top: 1px solid darken(@color-swatch1,10%);
+    border-top: 1px solid darken(@color-swatch1,70%);
 }
 
 .blogpost__post-article {
     position: relative;
-    border: 1px solid darken(@color-swatch1,10%);
+    border: 1px solid darken(@color-swatch1,70%);
     padding: 40px 20px 0 20px;
 }
 
 .blogpost__post-category {
-    border-right: 1px solid darken(@color-swatch1,10%);
+    border-right: 1px solid darken(@color-swatch1,70%);
     padding-right: 20px;
     margin-right: 20px;
     display: inline-block;
