--- a/less/navigation.less
+++ b/less/navigation.less
@@ -168,8 +168,6 @@ html.nav-open {
 // Item Name
 // ------------------------------
 
-@color__navigation--text--hover: @color__navigation--text;
-
 .navigation-body .item-name {
 	box-shadow: inset 0px 0px 0px 2px fade(@color__navigation--text, 0%);
 	padding: 1em 20px;
@@ -177,6 +175,10 @@ html.nav-open {
 
 	@media @mobile {
 		font-size: 15px;
+	}
+
+	&:hover {
+		color: @color__navigation--text--hover;
 	}
 }
 
