--- a/less/plugins/blog/blog-posts-list.less
+++ b/less/plugins/blog/blog-posts-list.less
@@ -188,6 +188,9 @@
         padding: 20px 0 50px;
         margin: 0 auto;
         float: right;
+        @media @mobile {
+            padding: 0px 0 30px;
+        }
     }
 }
 
