--- a/less/widgets/signupform.less
+++ b/less/widgets/signupform.less
@@ -83,7 +83,7 @@
 	        padding: 0 40px;
 	    }
 	    @media @bp-global-small {
-	        padding: 0 20px;
+	        padding: 0;
 	        width: auto;
 	    }
 	    @media @mobile {
@@ -130,6 +130,17 @@
 	.label {
 		display: none;
 
+	}
+
+
+
+	// Button
+	// ------------------------------
+
+	.button {
+		@media @mobile {
+			margin-top: 10px;
+		}
 	}
 }
 
