--- a/less/plugins/blog/blog-search.less
+++ b/less/plugins/blog/blog-search.less
@@ -76,7 +76,7 @@
             padding: 0 40px;
         }
         @media @bp-global-small {
-            padding: 0 20px;
+            padding: 0;
             width: auto;
         }
     }
@@ -116,6 +116,12 @@
     .label {
         display: none;
 
+    }
+
+    .button {
+        @media @bp-global-small {
+            line-height: 40px;
+        }
     }
 
     .button--submit {
