--- a/less/theme.less
+++ b/less/theme.less
@@ -198,7 +198,7 @@ body {
     @media @mobile {
         position: relative;
         order: 1;
-        padding: 0 0 20px;
+        padding: 20px;
         background-color: @color__header--background;
         border-bottom: 1px solid lighten(@color__header--background, 5%);
     }
@@ -248,8 +248,6 @@ body {
                 top: -2px;
                 right: 0;
                 width: 20%;
-                background-color: darken(@color__header--background, 2%);
-                border-bottom: 1px solid lighten(@color__header--background, 5%);
             }
         }
     }
