--- a/includes/header.twig
+++ b/includes/header.twig
@@ -2,10 +2,7 @@
 <header class="template-header">
 	<div class="container">
 
-		<div class="flex-item">
-			{{widget('profile', 'header-profile1', { 'profileType':'email' })|raw}}
-		</div>
-		<div class="flex-item">
+		<div class="companyname-logo">
 			{{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png')})|raw}}
 			{{widget('companyname', 'companyname', {
 				"business": "profile",
