burger icon taken off at desktop

--- a/includes/header.twig
+++ b/includes/header.twig
@@ -12,7 +12,7 @@
 		<div class="flex-item">
 			<div class="template-navigation">
 
-				{{widget('extendednavigation', 'extendednavigation', {"align":"center"})|raw}}
+				{{widget('extendednavigation', 'extendednavigation', {"align":"right"})|raw}}
 
 			</div>
 		</div>
