feature image styling

--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -28,7 +28,7 @@
 
 .feature__background-image {
     position: relative;
-    background-size: cover;
+    background-size: inherit;
     background-repeat: no-repeat;
     background-attachment: fixed;
     min-height: 800px;
@@ -37,6 +37,7 @@
         background-attachment: inherit;
         background-position-y: 0!important;
         min-height: 600px;
+        background-size: cover;
     }
 
     @media @mobile {
