--- a/less/navigation.less
+++ b/less/navigation.less
@@ -24,17 +24,17 @@ html.nav-open {
 
 .navigation-body {
 	@media @tablet {
-	z-index: -1000;
-	outline: 0;
-	height: 0;
-	width: 0;
-	overflow: hidden;
-	opacity: 0;
-	-webkit-transition: opacity 0.8s ease;
-	-moz-transition: opacity 0.8s ease;
-	-o-transition: opacity 0.8s ease;
-	transition: opacity 0.8s ease;
-}
+		z-index: -1000;
+		outline: 0;
+		height: 0;
+		width: 0;
+		overflow: hidden;
+		opacity: 0;
+		-webkit-transition: opacity 0.8s ease;
+		-moz-transition: opacity 0.8s ease;
+		-o-transition: opacity 0.8s ease;
+		transition: opacity 0.8s ease;
+	}
 }
 
 // When nav is open
@@ -54,35 +54,6 @@ html.nav-open {
 
 	@media @mobile {
 		padding-bottom: 45px;
-	}
-}
-
-// Widget Overlay
-.widget__extendednavigation {
-	+ .widget-overlay {
-		display: none;
-	}
-
-	&.open + .widget-overlay {
-		position: fixed!important;
-	    left: 0;
-	    right: 0;
-	    top: 0;
-	    bottom: 0;
-	    z-index: 10400!important;
-	    display: block;
-	    max-width: 500px;
-    	margin: 13% auto;
-
-    	@media @mobile {
-    		width: 90%;
-    	}
-
-    	&:hover {
-    		background: rgba(0, 147, 135, 0.2);
-    		border: 1px solid rgb(0, 148, 136);
-    		box-shadow: rgba(0, 147, 135, 0.2) 0px 0px 0px 3px inset;
-    	}
 	}
 }
 
@@ -299,6 +270,7 @@ html.nav-open {
 	height: 0;
 	overflow: hidden;
 	padding-right: 0;
+	min-width: 220px;
 	background-color: lighten(@color__container--background, 15%);
 	-webkit-transition: opacity 0.5s ease-in-out;
 	-moz-transition: opacity 0.5s ease-in-out;
