--- a/less/theme.less
+++ b/less/theme.less
@@ -97,7 +97,8 @@ body {
    }
 
    @media @tablet {
-        height: 80px;
+        height: 60px;
+        margin-top: -100px;
    }
 
 
@@ -121,7 +122,7 @@ body {
         -moz-box-shadow: inset 0px 0px 50px 0px rgba(148,148,148,1);
         box-shadow: inset 0px 0px 110px 0px rgb(130, 129, 129);
         @media @tablet {
-            box-shadow: inset 0px 0px 40px 0px #828181
+            box-shadow: inset 0px 0px 60px 0px #828181
         }
         @media @mobile {
             box-shadow: inset 0px 0px 20px 0px #828181
