added background texture to template

--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -5,6 +5,8 @@
 .blogpost__post-header {
     text-align: center;
     margin-top: 50px;
+    max-width: 800px;
+    margin: 0px auto;
     @media @tablet {
         margin-top: 0;
     }
