--- a/less/theme.less
+++ b/less/theme.less
@@ -64,6 +64,7 @@ body {
     position: relative;
     z-index: 50;
     background-color: @color__container--background;
+    background-image: image('/images/background-texture.jpg');
 
     @media @bp-global-large {
         padding-top: @value__widget--spacing--desktop;
@@ -121,6 +122,7 @@ body {
         -webkit-box-shadow: inset 0px 0px 50px 0px rgba(148,148,148,1);
         -moz-box-shadow: inset 0px 0px 50px 0px rgba(148,148,148,1);
         box-shadow: inset 0px 0px 110px 0px rgb(130, 129, 129);
+        background-image: image('/images/background-texture.jpg');
         @media @tablet {
             box-shadow: inset 0px 0px 60px 0px #828181
         }
@@ -378,7 +380,7 @@ body {
 
 .template-footer {
     width: 100%;
-    background-color: @color__container--background;
+    background-color: @color__footer--background;
     border-top: 1px solid darken(@color__container--background, 10%);
     text-align: center;
 
