--- a/less/theme.less
+++ b/less/theme.less
@@ -276,7 +276,7 @@ body {
     width: 100%;
     background-color: @color__container--background;
     min-height: auto;
-    border-bottom: 1px solid darken(@color__container--background, 10%);
+    border-bottom: 1px solid lighten(@color__container--background, 30%);
 
 
     // Flex Item
@@ -387,10 +387,10 @@ body {
     // Widget
     .widget {
         @media @bp-global-large {
-            padding: 40px 70px;
+            padding: 20px 70px;
         }
         @media @bp-global-medium {
-            padding: 30px 40px;
+            padding: 20px 40px;
         }
         @media @bp-global-small {
             padding: 20px 20px;
