--- a/less/plugins/blog/blog-posts-list.less
+++ b/less/plugins/blog/blog-posts-list.less
@@ -306,4 +306,22 @@
         }
     }
 
+        // Blog Post List in 3 columns
+    .columns-three-left, 
+    .columns-three-middle, 
+    .columns-three-right,
+    .columns-four-first, 
+    .columns-four-second, 
+    .columns-four-third, 
+    .columns-four-fourth {
+        .blogpostlist {
+            padding: 0;
+        }
+        .blogpostlist__post-image,
+        .blogpostlist__post-content {
+            width: 100%;
+        }
+    }
+
+
 }
