page title update

--- a/blogpost.twig
+++ b/blogpost.twig
@@ -7,6 +7,10 @@
 
     {% include "includes/header.twig" %}
 
+    <div class="page-title">
+        {{widget('pagetitle', 'page-title', {})|raw}}
+    </div>
+
 
     <!-- Zone Content -->
     <div class="main-content">
