--- a/less/fork-variables.less
+++ b/less/fork-variables.less
@@ -1,5 +1,5 @@
 // -------------------------------------
-// Kings Template: LESS > Fork Variables
+// Voyage Template: LESS > Fork Variables
 // -------------------------------------
 
 
