--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,5 +1,5 @@
 // ------------------------------
-// Kings Template: CSS > Mixins
+// Voyage Template: CSS > Mixins
 // ------------------------------
 
 
