--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,5 @@
 // --------------------------------
-// Kings Template: CSS > Navigation
+// Voyage Template: CSS > Navigation
 // --------------------------------
 
 
@@ -16,6 +16,17 @@ html.nav-open {
 // --------------------------------
 // #Navigation Overlay
 // --------------------------------
+
+
+// Template Navigation Div
+// ------------------------------
+
+.template-navigation {
+	max-width: 800px;
+	@media @tablet {
+		max-width: 100%;
+	}
+}
 
 
 // Navigation Body
