--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -94,12 +94,10 @@
     align-self: auto;
     width: 100%;
     padding: 10px 0px 5px;
-    border-top: 1px solid darken(@color-swatch1,70%);
 }
 
 .blogpost__post-article {
     position: relative;
-    border: 1px solid darken(@color-swatch1,70%);
     padding: 40px 20px 0 20px;
 }
 
@@ -112,6 +110,10 @@
 
 .blogpost__post-tags {
     display: inline-block;
+}
+
+.network-item {
+    margin-bottom: 10px;
 }
 
 // Blog Post Buttons
