--- a/less/plugins/ecommerce/basket-summary.less
+++ b/less/plugins/ecommerce/basket-summary.less
@@ -1,5 +1,5 @@
 // -------------------------------------------------------
-// Scribe Template: CSS > Plugins > Ecommerce > Basket Summary
+// Voyage Template: CSS > Plugins > Ecommerce > Basket Summary
 // -------------------------------------------------------
 
 
