--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -1,5 +1,5 @@
 // ------------------------------------
-// Scribe Template: CSS > Plugin: Ecommerce
+// Voyage Template: CSS > Plugin: Ecommerce
 // ------------------------------------
 
 
