--- a/less/typography.less
+++ b/less/typography.less
@@ -1,5 +1,5 @@
 // -------------------------------------
-// Kings Template: LESS > Typography
+// Voyage Template: LESS > Typography
 // -------------------------------------
 
 
