--- a/less/widget-spacing.less
+++ b/less/widget-spacing.less
@@ -1,5 +1,5 @@
 // ----------------------------------------------
-// Kings Template: LESS > Widgets > Widget Spacing
+// Voyage Template: LESS > Widgets > Widget Spacing
 // ----------------------------------------------
 
 
