--- a/less/plugins/blog/blog-search.less
+++ b/less/plugins/blog/blog-search.less
@@ -1,5 +1,5 @@
 // -----------------------------------------------
-// Scribe Template: CSS > Plugins > Blog > Blog Search
+// Voyage Template: CSS > Plugins > Blog > Blog Search
 // -----------------------------------------------
 
 
