--- a/less/plugins/ecommerce/featured-products.less
+++ b/less/plugins/ecommerce/featured-products.less
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------
-// Scribe Template: CSS > Plugins > Ecommerce > Featured Products
+// Voyage Template: CSS > Plugins > Ecommerce > Featured Products
 // ----------------------------------------------------------
 
 
