--- a/less/plugins/ecommerce/product.less
+++ b/less/plugins/ecommerce/product.less
@@ -1,5 +1,5 @@
 // ------------------------------------------------
-// Scribe Template: CSS > Plugins > Ecommerce > Product
+// Voyage Template: CSS > Plugins > Ecommerce > Product
 // ------------------------------------------------
 
 
