--- a/less/plugins/ecommerce/products-listing.less
+++ b/less/plugins/ecommerce/products-listing.less
@@ -1,5 +1,5 @@
 // ---------------------------------------------------------
-// Scribe Template: CSS > Plugins > Ecommerce > Products Listing
+// Voyage Template: CSS > Plugins > Ecommerce > Products Listing
 // ---------------------------------------------------------
 
 
