--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -1,5 +1,5 @@
 // -------------------------------
-// Scribe Template: CSS > Plugin: Blog
+// Voyage Template: CSS > Plugin: Blog
 // -------------------------------
 
 
