--- a/less/theme.less
+++ b/less/theme.less
@@ -1,5 +1,5 @@
 // -------------------------------------
-// Kings Template: LESS > Theme
+// Voyage Template: LESS > Theme
 // -------------------------------------
 
 
@@ -172,7 +172,8 @@ body {
 // Page Title Text
 .pagetitle-text {
     padding-bottom: 0;
-    .heading--4;
+    margin-top: 40px;
+    .heading--1;
 
     @media @mobile {
         font-size: bkscale(@font__h4--font-size, 0.7);
