--- a/less/widgets.less
+++ b/less/widgets.less
@@ -1,5 +1,5 @@
 // -------------------------------------
-// Kings Template: LESS > Widgets
+// Voyage Template: LESS > Widgets
 // -------------------------------------
 
 
