page type styling

--- a/less/theme.less
+++ b/less/theme.less
@@ -172,13 +172,15 @@ body {
 // Page Title Text
 .pagetitle-text {
     padding-bottom: 0;
-    margin-top: 40px;
-    .heading--1;
+    margin-top: 50px;
+    .heading--3;
 
     @media @mobile {
-        font-size: bkscale(@font__h4--font-size, 0.7);
-        line-height: bkscale(@font__h4--line-height, 0.7);
+        font-size: bkscale(@font__h1--font-size, 0.7);
+        line-height: bkscale(@font__h1--line-height, 0.7);
         text-align: center;
+        padding-bottom: 0;
+        margin-top: 20px;
     }
 }
 
