--- a/less/theme.less
+++ b/less/theme.less
@@ -157,30 +157,32 @@ body {
 // Page Title
 .pagetitle {
     padding: 6px 70px;
-    background-color: darken(@color__container--background, 4%);
-    border-bottom: 1px solid darken(@color__container--background, 10%);
     text-align: center;
+    margin-top: 50px;
 
     @media @bp-global-medium {
         padding: 6px 40px;
+        margin-top: 20px;
     }
     @media @bp-global-small {
         padding: 6px 20px;
+        margin-top: 20px;
     }
 }
 
 // Page Title Text
 .pagetitle-text {
     padding-bottom: 0;
-    margin-top: 50px;
-    .heading--3;
+    font-size: @font__h1--font-size;
+    font-weight: 400;
+    line-height: @font__h1--line-height;
+    color: @font__h3--color;
 
     @media @mobile {
         font-size: bkscale(@font__h1--font-size, 0.7);
         line-height: bkscale(@font__h1--line-height, 0.7);
         text-align: center;
         padding-bottom: 0;
-        margin-top: 20px;
     }
 }
 
