--- a/less/theme.less
+++ b/less/theme.less
@@ -162,7 +162,8 @@ body {
 
     @media @bp-global-medium {
         padding: 6px 40px;
-        margin-top: 20px;
+        margin-top: 30px;
+        margin-bottom: 10px;
     }
     @media @bp-global-small {
         padding: 6px 20px;
@@ -176,7 +177,12 @@ body {
     font-size: @font__h1--font-size;
     font-weight: 400;
     line-height: @font__h1--line-height;
-    color: @font__h3--color;
+    color: @color__h3--text;
+
+    @media @tablet {
+        font-size: bkscale(@font__h1--font-size, 0.9);
+        line-height: bkscale(@font__h1--line-height, 0.9);
+    }
 
     @media @mobile {
         font-size: bkscale(@font__h1--font-size, 0.7);
