--- a/less/widgets/twitter.less
+++ b/less/widgets/twitter.less
@@ -12,7 +12,7 @@
     display: inline-block;
     float: left;
     padding: 50px;
-    background-color: @color__secondary;
+    background-color: @color__twitter-item--background;
 
     width: 31.333%;
     margin-right: 3%;
@@ -71,6 +71,7 @@
 .tweet-content {
     padding-top: 15px;
     position: relative;
+    color: @color__twitter-tweet--text;
 
 
     // Link
@@ -100,7 +101,7 @@
     line-height: 40px;
     min-height: 40px;
     margin-left: 55px;
-    color: @color__h2--text;
+    color: @color__twitter-account-name--text;
 }
 
 .responsivecolumns .twitter__account-link {
