--- a/less/widgets/contact-form.less
+++ b/less/widgets/contact-form.less
@@ -20,7 +20,8 @@
 // ------------------------------
 
 
-.contactform__form-group {
+.contactform__form-group,
+.advancedcontactform__form-group {
 	margin-bottom: 26px;
 
 	@media @bp-global-small {
@@ -46,7 +47,8 @@
 // ------------------------------
 
 
-.contactform__form-body {
+.contactform__form-body,
+.advancedcontactform__form-body {
 	width: 66.66%;
 	margin: 0 0 0 auto;
 	padding: 0 70px;
@@ -70,7 +72,8 @@
 // ------------------------------
 
 
-.contactform__legend {
+.contactform__legend,
+.advancedcontactform__legend {
 	position: absolute;
 	top: 0;
 	right: auto;
