--- a/less/widgets/slideshow.less
+++ b/less/widgets/slideshow.less
@@ -441,11 +441,31 @@
 		}
 
 		// 4 columns
-		.columns-four-first,
-		.columns-four-second,
-		.columns-four-third,
-		.columns-four-fourth {
+    	.columns-four-first,
+    	.columns-four-second,
+    	.columns-four-third,
+    	.columns-four-fourth
+			.slide-navigation {
+				display: none;
+			}
+		}
 
+		// 3 and 4 columns
+    	.columns-four-first,
+    	.columns-four-second,
+    	.columns-four-third,
+    	.columns-four-fourth,
+    	.columns-three-left,
+    	.columns-three-right,
+    	.columns-three-middle {
+    		.responsiveslideshow__image-title {
+    			font-size: 14px;
+    			line-height: 30px;
+    		}
+    		.responsiveslideshow__image-description {
+    			font-size: 12px;
+    			line-height: 26px;
+    		}
 		}
 	}
 }
