--- a/less/theme.less
+++ b/less/theme.less
@@ -64,7 +64,7 @@ body {
     position: relative;
     z-index: 50;
     background-color: @color__container--background;
-    background-image: image('/images/background-texture.jpg');
+    background-image: image('/images/background-texture.png');
 
     @media @bp-global-large {
         padding-top: @value__widget--spacing--desktop;
@@ -122,7 +122,8 @@ body {
         -webkit-box-shadow: inset 0px 0px 50px 0px rgba(148,148,148,1);
         -moz-box-shadow: inset 0px 0px 50px 0px rgba(148,148,148,1);
         box-shadow: inset 0px 0px 110px 0px rgb(130, 129, 129);
-        background-image: image('/images/background-texture.jpg');
+        background-image: image('/images/background-texture.png');
+        background-color: @color__container--background;
         @media @tablet {
             box-shadow: inset 0px 0px 60px 0px #828181
         }
@@ -283,12 +284,17 @@ body {
 .widget[data-widget-type="feature"].bk-tpl-hidden + .template-header,
 .page--default .template-header {
     position: relative;
-    z-index: inherit;
+    z-index: 99;
     width: 100%;
     background-color: @color__container--background;
     min-height: auto;
     border-bottom: 1px solid lighten(@color__container--background, 30%);
 
+
+    // Feature Arrow
+    .feature-arrow {
+        display: none;
+    }
 
     // Flex Item
     @media @mobile {
