--- a/less/widgets/slideshow.less
+++ b/less/widgets/slideshow.less
@@ -444,7 +444,7 @@
     	.columns-four-first,
     	.columns-four-second,
     	.columns-four-third,
-    	.columns-four-fourth
+    	.columns-four-fourth {
 			.slide-navigation {
 				display: none;
 			}
