test feature arrow

--- a/less/theme.less
+++ b/less/theme.less
@@ -386,6 +386,13 @@ body {
     display: none;
 }
 
+.feature-arrow {
+    display: none;
+}
+
+.feature + .feature-arrow {
+    display: block;
+}
 
 // ------------------------------
 // #Footer
