--- a/less/theme.less
+++ b/less/theme.less
@@ -289,10 +289,6 @@ body {
     border-bottom: 1px solid lighten(@color__container--background, 30%);
 
 
-.feature-arrow {
-    display: none;
-}
-    
     // Flex Item
     @media @mobile {
         .flex-item:first-child,
@@ -384,6 +380,11 @@ body {
     }
 }
 
+
+// Feature Arrow Deletion
+.widget[data-widget-type="feature"].bk-tpl-hidden + .feature-arrow {
+    display: none;
+}
 
 .feature + .feature-arrow {
     display: block;
