--- a/less/theme.less
+++ b/less/theme.less
@@ -380,8 +380,7 @@ body {
     }
 }
 
-.widget[data-widget-type="feature"].bk-tpl-hidden + .feature-arrow,
-.feature-arrow {
+.widget[data-widget-type="feature"].bk-tpl-hidden + .feature-arrow {
   display: none;
 }
 
