--- a/less/theme.less
+++ b/less/theme.less
@@ -380,7 +380,8 @@ body {
     }
 }
 
-.widget[data-widget-type="feature"].bk-tpl-hidden + .feature-arrow {
+.widget[data-widget-type="feature"].bk-tpl-hidden + .feature-arrow,
+.feature-arrow {
   display: none;
 }
 
