--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,5 +1,5 @@
 // -------------------------------------
-// Kings Template: Stylesheet
+// Voyage Template: Stylesheet
 // -------------------------------------
 
 
@@ -26,3 +26,6 @@
 @import "@{templateLocal}/less/plugins/plugin-ecommerce.less";  // Plugin: Ecommerce
 
 @import "@{templateLocal}/less/fork-variables.less";    // Fork Variables
+
+@import url(https://fonts.googleapis.com/css?family=Orbitron:300,400,700);  // Fork Variables
+@import url(https://fonts.googleapis.com/css?family=Space+Mono:300,400,700);  // Fork Variables
