site container added

--- a/less/theme.less
+++ b/less/theme.less
@@ -46,6 +46,11 @@ body {
     background-color: @color__body--background;
 }
 
+.container {
+    max-width: 1200px;
+    margin: 0px auto;
+}
+
 
 // Site Container
 .site-container {
