--- a/less/widgets/gallery.less
+++ b/less/widgets/gallery.less
@@ -10,8 +10,8 @@
 .gallery__gallery-item {
 	float: left;
 	height: 0; // Height is achieved using padding-bottom
-	width: @value__gallery--width--desktop;
-	padding-bottom: @value__gallery--width--desktop;
+	width: 33.3%;
+	padding-bottom: 33.3%;
 	overflow: hidden;
 	position: relative;
 	margin: 0;
