--- a/less/widgets.less
+++ b/less/widgets.less
@@ -332,5 +332,5 @@
 
 hr.rule {
     height: 3px;
-    background-color: darken(@color__container--background, 5%);
+    background-color: darken(@color-swatch1,70%);
 }
