--- a/less/theme.less
+++ b/less/theme.less
@@ -73,15 +73,19 @@ body {
 
     @media @bp-global-large {
         padding-top: @value__widget--spacing--desktop;
+        padding-bottom: @value__widget--spacing--desktop;
     }
     @media @bp-global-medium {
         padding-top: @value__widget--spacing--laptop;
+        padding-bottom: @value__widget--spacing--laptop;
     }
     @media @tablet {
         padding-top: @value__widget--spacing--tablet;
+        padding-bottom: @value__widget--spacing--tablet;
     }
     @media @mobile {
         padding-top: @value__widget--spacing--mobile;
+        padding-bottom: @value__widget--spacing--mobile;
     }
 }
 
