--- a/less/widgets/gallery.less
+++ b/less/widgets/gallery.less
@@ -64,8 +64,9 @@
 	width: 100%;
 	height: 0;
 	padding-bottom: 100%;
-	background-size: cover;
+	background-size: contain;
 	background-position: center center;
+	background-repeat: no-repeat;
 }
 
 .gallery__image {
