--- a/less/theme.less
+++ b/less/theme.less
@@ -168,11 +168,10 @@ body {
 .pagetitle {
     padding: 6px 70px;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 30px;
 
     @media @bp-global-medium {
         padding: 6px 40px;
-        margin-top: 30px;
         margin-bottom: 10px;
     }
     @media @bp-global-small {
@@ -251,6 +250,9 @@ body {
     min-height: auto;
     border-bottom: 1px solid lighten(@color__container--background, 30%);
 
+    @media @tablet {
+        padding: 30px;
+    }
 
     // Flex Item
     @media @mobile {
