--- a/less/navigation.less
+++ b/less/navigation.less
@@ -166,7 +166,7 @@ html.nav-open {
 
 .navigation-body .item-name {
 	box-shadow: inset 0px 0px 0px 2px fade(@color__navigation--text, 0%);
-	padding: 1em 20px;
+	padding: 10px 20px;
 	text-transform: uppercase;
 
 	@media @mobile {
@@ -229,7 +229,7 @@ html.nav-open {
 		margin-left: 0.4em;
 		display: inline-block;
 		width: 0.8em;
-		height: 0.8em;
+		height: 0.5em;
 		line-height: 0.8em;
 		text-align: center;
 		// Folder icon animation
