--- a/less/theme.less
+++ b/less/theme.less
@@ -229,7 +229,7 @@ body {
         position: relative;
         order: 1;
         padding: 20px;
-        border-bottom: 1px solid lighten(@color__header--background, 5%);
+        border-bottom: 1px solid lighten(#000000, 5%);
     }
 }
 
@@ -371,11 +371,6 @@ body {
             border-right: 1px solid darken(@color__container--background, 10%);
         }
 
-    }
-
-    // Comapny Link
-    .company-link {
-        color: @color__h2--text;
     }
 
     // Navigation Toggle Button
