--- a/less/widgets/slideshow.less
+++ b/less/widgets/slideshow.less
@@ -328,14 +328,14 @@
 
 	.button {
 		opacity: .4;
-		background-color: @color__container--background;
+		background-color: #BFBFBF;
 	}
 
 	// Selected Button
 
 	&.selected .button {
 		opacity: 1;
-		background-color: @color__container--background;
+		background-color: #BFBFBF;
 	}
 }
 
