--- a/less/widgets/twitter.less
+++ b/less/widgets/twitter.less
@@ -101,6 +101,7 @@
     line-height: 40px;
     min-height: 40px;
     margin-left: 55px;
+    letter-spacing: 2px;
     color: @color__twitter-account-name--text;
 }
 
