--- a/less/typography.less
+++ b/less/typography.less
@@ -236,8 +236,8 @@ a {
 		text-align: center;
 		font-size: @font__h4--font-size;
 		line-height: @font__h4--line-height;
-		border-top: 1px solid fade(@color__p--text, 10%);
-		border-bottom: 1px solid fade(@color__p--text, 10%);
+		border-top: 1px solid #4d4d4d;
+		border-bottom: 1px solid #4d4d4d;
 		padding: 1.5em 50px;
 		width: 70%;
 		margin: 1.8em auto 0;
