--- a/less/widgets/profile.less
+++ b/less/widgets/profile.less
@@ -253,7 +253,7 @@
                 border-top: 0;
                 border-bottom: 0;
                 border-left: 0;
-                border-top-color: @color__header--background;
+                border-top-color: #000000;
                 border-width: 1px;
                 line-height: 43px;
             }
