--- a/includes/header.twig
+++ b/includes/header.twig
@@ -3,10 +3,9 @@
 	<div class="container">
 
 		<div class="companyname-logo">
-			{{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png')})|raw}}
+			{{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png'),"showTplWidget":"0"})|raw}}
 			{{widget('companyname', 'companyname', {
 				"business": "profile",
-				"showTplWidget":"0"
 			})|raw}}
 		</div>
 		<div class="flex-item">
