--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -115,7 +115,7 @@ textarea {
 
 .button {
     position: relative;
-    padding: 0 26px;
+    padding: 2px 26px 0px;
     font-size:  @font__button--font-size;
     line-height: @font__button--line-height;
     font-weight: @font__button--font-weight;
