blog post list styling

--- a/less/plugins/blog/blog-posts-list.less
+++ b/less/plugins/blog/blog-posts-list.less
@@ -48,7 +48,9 @@
     position: relative;
     float: left;
     width: 100%;
+    margin-top: 30px;
     @media @tablet {
+        margin-top: 0;
         padding: 40px 30px 30px 20px;
     }
     @media @mobile {
@@ -82,6 +84,7 @@
     display: inline-block;
     @media @tablet {
         float: initial;
+        margin-bottom: 10px;
         width: 100%;
         text-align: center;
     }
